@@ -4,6 +4,15 @@
 See the file NEWS for changes that affect all versions of R.
 
 
+rw1030
+======
+
+No Windows-specific changes (nor are any planned).
+
+Support for earlier compilers has been dropped: you must use a
+compiler system that supports --shared and an in-memory dlltool.
+
+
 rw1021
 ======
 
